# twitch_chat_parser

./: .env  Cargo.toml  Dockerfile  LICENSE  TODO.md  config.toml
migrations/2019-04-22-201412_init/: up.sql
migrations/2019-05-24-150250_rename_moderator/: down.sql  up.sql
migrations/2019-06-07-115542_chanindex/: down.sql  up.sql
scripts/: count_by_channel.sql  list_channels.sql  total_count.sql
src/: channels.rs  controller.rs  db.rs  error.rs  main.rs  models.rs  schema.rs  twitchclient.rs  types.rs  videos.rs
src/types/: mod.rs
