[package]
name = "twitch_chat_parser"
version = "0.1.0"
authors = ["temp1011 <temp1011github@gmail.com>"]
edition = "2018"

[dependencies]
irc = "0.13.6"
serde={version = "1.0.90", features = ["derive"]}
serde_json="1.0.39"
chrono = {version = "0.4.6", features = ["serde"]}
diesel = {version = "1.4.2", features = ["sqlite"]}
dotenv = "0.13.0"
reqwest = "0.9.16"
rand = "0.6.5"
uuid = { version = "0.7", features = ["serde"] }
futures = "0.1.28"

[profile.release]
lto=true
