[package]
name = "twitch_chat_parser"
version = "0.1.0"
authors = ["temp1011 <temp1011github@gmail.com>"]
edition = "2018"

[dependencies]
serde={version = "1.0.90", features = ["derive"]}
serde_json="1.0.39"
chrono = {version = "0.4.6", features = ["serde"]}
diesel = {version = "1.4.2", features = ["sqlite"]}
dotenv = "0.13.0"
reqwest = {version = "0.10.4", features = ["blocking", "json"]}
uuid = { version = "0.7", features = ["serde"] }
twitchchat = "0.10.2"
tokio="0.2.20"

[profile.release]
lto=true
